# talk_rag_scheduler

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: .gitignore  00_start_here.ipynb  01_indexing.ipynb  02a_retrieval_bm25.ipynb  02b_retrieval_vector.ipynb  03a_rag.ipynb  03b_rag_concurrent.ipynb  04_retrieval_bench.ipynb  wip_plot.ipynb
src/talk_rag_scheduler/: argument_parser.py  bench_retrieval.py  const.py  indexing_pipeline.py  models.py  rag_pipeline.py  rag_pipeline_concurrent.py  retrieval_pipeline.py  utils.py
